feat: use mapstruct